--- a/authen-with-fb-gg/package.json
+++ b/authen-with-fb-gg/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
